--- a/app/views/job/index.html.erb
+++ b/app/views/job/index.html.erb
@@ -25,7 +25,7 @@
 			</thead>
 			<tbody>
 			<% if @jobs.size == 0 %> 
-				<p>Currently, there are no transactions.</p> 
+				<p>No hay jobs</p> 
 			<% else %>	
 				<% for job in @jobs %>
 				<tr>
