ya guarda en base de datos

--- a/app/views/job/show.html.erb
+++ b/app/views/job/show.html.erb
@@ -19,6 +19,7 @@
 				<th>JobName</th>
 				<th>Queue</th>
 				<th>Ctime</th>
+				<th>Qtime</th>
 				<th>Etime</th>
 				<th>Start</th>
 				<th>Owner</th>			
@@ -35,6 +36,7 @@
 						<th><%= job.jobname %></th>
 						<th><%= job.queue %></th>
 						<th><%= job.ctime %></th>
+						<th><%= job.qtime %></th>
 						<th><%= job.etime %></th>
 						<th><%= job.start %></th>
 						<th><%= job.owner %></th>
