--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 	<title>PICNIC</title>
 	<%= stylesheet_link_tag 'style' %>
 	<%= stylesheet_link_tag 'css/ui-lightness/jquery-ui-1.8.2.custom' %>
-	<%= javascript_include_tag "js/jquery-1.4.2.min", "js/jquery-ui-1.8.2.custom.min","js/highcharts" %>
+	<%= javascript_include_tag "js/jquery-1.4.2.min", "js/jquery-ui-1.8.2.custom.min" %>
 	<%= yield :head %> 
 </head>
 	<body class="home blog">
