--- a/app/views/job/show.html.erb
+++ b/app/views/job/show.html.erb
@@ -28,7 +28,7 @@ $(document).ready(function() {
 					text: "Jobs Ejecutados"
 				},
 				xAxis:{
-					categories: ['jobs.group']
+					categories: ['Grupos']
 
 				},
 				yAxis:{
