--- a/app/views/job/show.html.erb
+++ b/app/views/job/show.html.erb
@@ -14,70 +14,11 @@ $(document).ready(function() {
 	});
 });
 </script>
- <% end %>
-	<h1>JOBS</h1> 
-	
-	<script type="text/javascript" charset="utf-8">
-		$(function() {
-			new Highcharts.Chart({
-				chart: {
-					renderTo: "jobs_chart",
-					defaultSeriesType: 'bar'
-				},
-				title: {
-					text: "Jobs Ejecutados"
-				},
-				xAxis:{
-					categories: ['Grupos']
+<% end %>
 
-				},
-				yAxis:{
-					title:{
-						text: "Prueba"
-					}
-				},
-				tooltip: {
-				         formatter: function() {
-				            return ''+
-				                this.series.name +': '+ this.y	;
-				         }
-				      },
-				      plotOptions: {
-				         bar: {
-				            dataLabels: {
-				               enabled: true
-				            }
-				         }
-				      },
-				legend: {
-				         layout: 'vertical',
-				         align: 'right',
-				         verticalAlign: 'top',
-				         x: -90,
-				         y: 20,
-				         borderWidth: 1,
-				         backgroundColor: '#FFFFFF'
-				      },
-			 series: [
-			<% for job in @group_counts %>
-							{
-							name:'<%= job.group %>',
-							data:[<%= job.number_of_jobs %>]
-									},										
-									<% end %>
-						      ]
-				});
-			});
-	</script>
 	
 	<div id="jobs_chart" style="width:560px; height:300px"></div>
-		
-<h3>El Tiempo en cola ha sido de: <%= @time_in_queue %> segundos</h3>
-<h3>El Tiempo en ejecucion ha sido de: <%= @time_in_execution %> segundos</h3>
-<h3>La memoria utilizada ha sido de: <%= number_to_human_size(@memory) %></h3>
-<h3>La memoria virtual utilizada ha sido de: <%= number_to_human_size(@virtual_memory) %></h3>
-<h3>El tiempo de CPU ha sido de: <%= @cput %></h3>
-<h3>El Walltime ha sido de : <%= @walltime %></h3>
+
 
 			<table id="jobs" title="jobs" summary="Tiene los trabajos ejecutados en PBS">
 			<thead>
@@ -87,10 +28,10 @@ $(document).ready(function() {
 				</tr>		
 			</thead>
 			<tbody>
-					<% for job in @group_counts %>
+					<% for job in @jobs %>
 					<tr>
 							<td><%= job.group %></td>
-							<td><%= job.number_of_jobs %></td>										
+							<td><%= job.proceso.software.name %></td>										
 					</tr>
 					<% end %>
 			</tbody>
