Se rectificaron variables de proceso

--- a/app/views/layouts/_heading.html.erb
+++ b/app/views/layouts/_heading.html.erb
@@ -15,13 +15,16 @@
 			<div class="menu-header">
 				<ul id="menu-menu-principal"class="menu">
 					<li id="menu-item-37" class="menu-item menu-item-type-custom">
-						<%=link_to "Jobs"%>
+						<%=link_to "Jobs" %>
+						
+					</li>
+					<li id="menu-item-37" class="menu-item menu-item-type-custom">
+						<%=link_to "Procesos", procesos_path%>
 						<ul class="sub-menu">										
 							<li id="menu-item-38" class="menu-item menu-item-type-post_type ultimo">
-								<%=link_to "Estadisticas"%></li>						
+								<%=link_to "Nuevo Proceso", new_proceso_path %></li>						
 						</ul>
 					</li>
-
 			
 				</ul>
 			</div><!-- #menu-header -->
