--- a/app/views/layouts/_heading.html.erb
+++ b/app/views/layouts/_heading.html.erb
@@ -25,6 +25,14 @@
 								<%=link_to "Nuevo Proceso", new_proceso_path %></li>						
 						</ul>
 					</li>
+					<li id="menu-item-37" class="menu-item menu-item-type-custom">
+						<%=link_to "Software", softwares_path%>
+						<ul class="sub-menu">										
+							<li id="menu-item-38" class="menu-item menu-item-type-post_type ultimo">
+								<%=link_to "New Software", new_software_path %></li>						
+						</ul>
+					</li>
+					
 			
 				</ul>
 			</div><!-- #menu-header -->
