se anadio el modulo para exportar los graficos en png, jpg, pdf o SVG vector image

--- a/app/views/layouts/_heading.html.erb
+++ b/app/views/layouts/_heading.html.erb
@@ -19,10 +19,10 @@
 						
 					</li>
 					<li id="menu-item-37" class="menu-item menu-item-type-custom">
-						<%=link_to "Procesos", procesos_path%>
+						<%=link_to "Processes", procesos_path%>
 						<ul class="sub-menu">										
 							<li id="menu-item-38" class="menu-item menu-item-type-post_type ultimo">
-								<%=link_to "Nuevo Proceso", new_proceso_path %></li>						
+								<%=link_to "New Process", new_proceso_path %></li>						
 						</ul>
 					</li>
 					<li id="menu-item-37" class="menu-item menu-item-type-custom">
