--- a/app/views/proyects/new.html.erb
+++ b/app/views/proyects/new.html.erb
@@ -1,15 +1,5 @@
 <h1>New proyect</h1>
 
-<% form_for(@proyect) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
-<% end %>
+<%= render :partial => "form", :locals => { :button_label => "Create Proyect"} %>
 
 <%= link_to 'Back', proyects_path %>
