--- a/app/views/softwares/show.html.erb
+++ b/app/views/softwares/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>  
-<%= javascript_include_tag 'jquery.dataTables','highcharts' %>  
+<%= javascript_include_tag 'jquery.dataTables','highcharts','js/modules/exporting.js' %> 
 <%= stylesheet_link_tag 'demo_table_jui' %>
 <script type="text/javascript">
 $(document).ready(function() {
