--- a/app/views/proyects/edit.html.erb
+++ b/app/views/proyects/edit.html.erb
@@ -1,16 +1,6 @@
 <h1>Editing proyect</h1>
 
-<% form_for(@proyect) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
-<% end %>
+<%= render :partial => "form", :locals => { :button_label => "Update Proyect"} %>
 
 <%= link_to 'Show', @proyect %> |
 <%= link_to 'Back', proyects_path %>
