--- a/app/views/softwares/edit.html.erb
+++ b/app/views/softwares/edit.html.erb
@@ -1,16 +1,6 @@
 <h1>Editing <%= @software.name %></h1>
 
-<% form_for(@software) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
-<% end %>
+<%= render :partial => "form", :locals => { :button_label => "Update Software"} %>
 
 <%= link_to 'Show', @software %> |
 <%= link_to 'Back', softwares_path %>
