--- a/app/views/softwares/new.html.erb
+++ b/app/views/softwares/new.html.erb
@@ -1,15 +1,5 @@
 <h1>New software</h1>
 
-<% form_for(@software) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
-<% end %>
+<%= render :partial => "form", :locals => { :button_label => "Create Software"} %>
 
 <%= link_to 'Back', softwares_path %>
