se relacionan las secuencias con los formatos

--- a/app/views/layouts/_heading.html.erb
+++ b/app/views/layouts/_heading.html.erb
@@ -40,7 +40,13 @@
 								<%=link_to "New Proyect", new_proyect_path %></li>						
 						</ul>
 					</li>
-					
+						<li id="menu-item-37" class="menu-item menu-item-type-custom">
+							<%=link_to "Formats", formatos_path%>
+							<ul class="sub-menu">										
+								<li id="menu-item-38" class="menu-item menu-item-type-post_type ultimo">
+									<%=link_to "New Format", new_formato_path %></li>						
+							</ul>
+						</li>
 					<li id="menu-item-37" class="menu-item menu-item-type-custom">
 						<%=link_to "Sequences"%>
 								
