--- a/app/views/layouts/_heading.html.erb
+++ b/app/views/layouts/_heading.html.erb
@@ -34,10 +34,10 @@
 					</li>
 					
 					<li id="menu-item-37" class="menu-item menu-item-type-custom">
-						<%=link_to "Proyect", proyects_path%>
+						<%=link_to "Project", projects_path%>
 						<ul class="sub-menu">										
 							<li id="menu-item-38" class="menu-item menu-item-type-post_type ultimo">
-								<%=link_to "New Proyect", new_proyect_path %></li>						
+								<%=link_to "New Project", new_project_path %></li>						
 						</ul>
 					</li>
 						<li id="menu-item-37" class="menu-item menu-item-type-custom">
@@ -53,6 +53,9 @@
 							<li id="menu-item-38" class="menu-item menu-item-type-post_type ultimo">
 								<%=link_to "Free Disk", freedisk_sequences_path %></li>						
 						</ul>		
+					</li>
+					<li id="menu-item-37" class="menu-item menu-item-type-custom">
+						<%=link_to "Charts", charts_path%>	
 					</li>
 					
 			
