--- a/app/views/softwares/show.html.erb
+++ b/app/views/softwares/show.html.erb
@@ -23,7 +23,7 @@ $(document).ready(function() {
 </p>
 
 
-<%= render :partial => "shared/line", :locals => { :insert_div => "memory_line_chart", :title => "Memory Vs Virtual Memory", :name_data_1 => "Memory", :name_data_2 => "Virtual Memory", :data1 => "total_memory"} %>
+<%= render :partial => "shared/line", :locals => { :insert_div => "memory_line_chart", :title => "Memory Vs Virtual Memory"} %>
 
 
 <div id="memory_line_chart" style="width:560px; height:300px"></div>
